--- a/Clash-LIAN.ini
+++ b/Clash-LIAN.ini
@@ -1,4 +1,5 @@
 ;1、域名组
+ruleset=🌍 Me,https://raw.githubusercontent.com/johnzdq/clash/refs/heads/main/me.list
 ruleset=👽 AI1,https://raw.githubusercontent.com/johnzdq/clash/refs/heads/main/AI.list
 ruleset=👽 AI2,https://raw.githubusercontent.com/johnzdq/clash/refs/heads/main/AI2.list
 ruleset=📘 GitHub,https://raw.githubusercontent.com/johnzdq/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
